chore(deps): add bull-board for queue monitoring
- Add @bull-board/api
- Add @bull-board/fastify

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test": "tsx --test test/unit/**/*.test.ts"
   },
   "dependencies": {
+    "@bull-board/api": "^6.16.2",
+    "@bull-board/fastify": "^6.16.2",
     "@fastify/cors": "^10.0.0",
     "axios": "^1.7.0",
     "bullmq": "^5.0.0",
